# jigs

./: .gitignore  .pre-commit-config.yaml  README.md  client.py  pyproject.toml  requirements.txt  requirements_server.txt  server.py
.github/workflows/: codeql.yml  release.yml  test.yml
jigs/: client.py  core.py  discord.py  server.py
